<resources>
    <string name="app_name">BugTracking</string>

    <string name="default_lang">en</string>
    <!-- Login Activity-->
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="logButton">Log in</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="input_repeatPassword">Repeat Password</string>
    <string name="action_register">Register</string>
    <string name="action_already_account">Already an account? Go back</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Action bar Activity-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="profil">Profile</string>

    <!-- Action bar Title -->
    <string name="title_activity_project_main">ProjectMainActivity</string>


    <!-- Bug Tabs-->
    <string name="tab_current">Current</string>
    <string name="tab_solved">Solved</string>
    <string name="tab_onhold">On hold</string>
    <string name="issue_title">Title</string>
    <string name="issue_description">Description</string>
    <string name="issue_reproduction">How to reproduce</string>
    <string name="issue_effects">Effects</string>


    <string-array name="priority_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="state_array">
        <item>On Hold</item>
        <item>Current</item>
        <item>Solved</item>
    </string-array>
    <string-array name="lang_array">
        <item>EN</item>
        <item>FR</item>
    </string-array>
    <string name="title_activity_project_crud">ProjectCrudActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_issue_view">IssueViewActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="aboutDev">Developers</string>
    <string name="CREATE_BUG">Create Bug</string>
    <string name="COMMENT_TITLE">Title</string>
    <string name="ADD_COMMENT">Add comment</string>
    <string name="WRONG_LOGIN">Your login or password is wrong !</string>
    <string name="CHANGE_PASSWORD">Change password</string>
    <string name="CURRENT_PASSWORD">Current password</string>
    <string name="NEW_PASSWORD">New password</string>
    <string name="NEW_PASSWORD_REPEAT">Repeat new password</string>
    <string name="CONFIRM">Confirm</string>
    <string name="LOGOUT">Logout</string>
    <string name="TITLE">Title</string>
    <string name="DESCRIPTION">Description</string>
    <string name="START_DATE">Start date</string>
    <string name="ADD_START_DATE">Add Start Date</string>
    <string name="END_DATE">End Date</string>
    <string name="ADD_END_DATE">Add End Date</string>
    <string name="ADD_DEVELOPPER">Add Developper</string>
    <string name="ADD_PROJECT">Add Project</string>
    <string name="UPDATE_PROJECT">Update Project</string>
    <string name="DELETE_PROJECT">Delete project</string>
    <string name="ADD">Add</string>
    <string name="SELECT_LANG">Select language</string>
    <string name="SETTINGS">Settings</string>
    <string name="ABOUT">About</string>
    <string name="PROFILE">Profile</string>
    <string name="ISSUE_VIEW">Issue View</string>
    <string name="PROJECT_CRUD">Project CRUD</string>
    <string name="BUG_CRUD">BugCrud</string>
    <string name="BUG_ACITVITY">Bug Activity</string>
    <string name="BUGTRAKPRO">BugTraking - Projects</string>
    <string name="YOUR_COMMENT">Your comment</string>

</resources>
