<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CHANGE_PASSWORD"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/current_pass"
        android:hint="@string/CURRENT_PASSWORD"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/NEW_PASSWORD"
        android:id="@+id/new_pass" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/NEW_PASSWORD_REPEAT"
        android:id="@+id/new_pass_repeat" />

    <Button
        android:layout_width="fill_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/CONFIRM"
        android:id="@+id/button_action_confirm" />
    <Button
        android:layout_width="fill_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/LOGOUT"
        android:id="@+id/button_logout" />
</LinearLayout>