<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    tools:context="com.example.bugtracking.bugtracking.ProjectCrudActivity">

    <EditText
        android:id="@+id/proCrudTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TITLE"/>

    <EditText
        android:id="@+id/proCrudDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DESCRIPTION"
        android:singleLine="false"/>

    <EditText
        android:id="@+id/proStartDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/START_DATE"

        />
    <Button
        android:id="@+id/proStartDateAdd"
        android:layout_width="wrap_content"
        android:layout_height="90px"
        android:text="@string/ADD_START_DATE"
        android:textSize="9dp"
        android:onClick="clicAddStartDate"
        />

    <EditText
        android:id="@+id/proEndDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/END_DATE"

        />
    <Button
        android:id="@+id/proEndDateAdd"
        android:layout_width="wrap_content"
        android:layout_height="90px"
        android:text="@string/ADD_END_DATE"
        android:textSize="9dp"
        android:onClick="clicAddEndDate"
        />

    <Button
        android:id="@+id/prodCrudAddDevelopper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/ADD_DEVELOPPER"
        android:onClick="clicAddDeveloper"
        />


    <Button
        android:id="@+id/AddProjectCrud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/ADD_PROJECT"

        android:onClick="clicAddProject"
        />

    <TextView
        android:id="@+id/proCrudTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/updateProjectCrud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/UPDATE_PROJECT"

        android:onClick="clicUpdateProject"


        />





    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        tools:context="com.example.bugtracking.bugtracking.ProjectCrudActivity">

        <Button
            android:id="@+id/deleteProjectCrud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/DELETE_PROJECT"
            android:onClick="clicDeletProject"

            />


    </RelativeLayout>



</LinearLayout>



